Addition of start- and end-time
